2008-02-20  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-notice-face): Fix this face for Emacs 21 users.

2008-02-04  Jeremy Maitin-Shepard  <jbms@cmu.edu>

	* erc.el (erc-cmd-QUERY): Bind the value of `erc-auto-query' to
	`erc-query-display' rather than `erc-join-buffer'.  This fixes a
	bug where the value of erc-auto-query was being ignored.

2008-01-31  Michael Olson  <mwolson@gnu.org>

	* erc-dcc.el (erc-dcc-do-GET-command, erc-dcc-do-SEND-command):
	Improve docstring.  If FILE argument is split into multiple
	arguments, re-join them into a single string, separated by a
	space.  This fixes an issue where the user wants to send or
	receive a file with spaces in its name.  It is assumed that no one
	will try sending or receiving a file with multiple consecutive
	spaces in its name, otherwise this fix will fail.

	* erc.el (erc-mode-map): Add binding for C-c C-x to
	erc-quit-server, since rcirc.el binds its quit command in a
	similar manner.  Thanks to Jari Aalto for the suggestion.

2008-01-28  Diane Murray  <disumu@x3y2z1.net>

	* erc-list-old.el (list-old): Define module as list-old, not list.
	This fixes a bug where an unknown module error would occur when
	starting ERC and using the list-old module.

	* erc-track.el (erc-track-find-face): If no choice was found
	return nil to use the default mode-line faces.

2008-01-26  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-version-string): Release ERC 5.3.

	* Makefile (VERSION): Update.
	(EXTRAS): Remove erc-list.el after all, because this is mainly for
	users of the version that comes with Emacs, and they will have
	erc-list.el by Emacs 23.
	(MISC): Add ChangeLog.07.
	(elpa): Fix build issue.  Add proper version to erc-pkg.el.

	* README.extras: Mention Emacs 23.

	* erc-pkg.el: Make the version string a template.

	* erc.texi (Obtaining ERC): Update extras URLs for 5.3.
	(Development): Write instructions for git, and remove those for
	Arch.
	(History): Mention the switch to git.
